Fix the background image on mobile view

--- a/client/src/styles/appointment/Appointment.module.scss
+++ b/client/src/styles/appointment/Appointment.module.scss
@@ -19,8 +19,12 @@
     background-image: url(/background_2.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
-    background-attachment: fixed;
+    background-size: cover;
+    background-attachment: scroll;
+
+    @screen lg{
+        background-attachment: fixed
+    }
 }
 
 .title{
